mediamtx/statefulset.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mediamtx
  namespace: hub
spec:
  serviceName: mediamtx-headless
  replicas: 1
  selector:
    matchLabels:
      app: mediamtx
  template:
    metadata:
      labels:
        app: mediamtx
    spec:
      serviceAccountName: mediamtx-serviceaccount
      containers:
      - name: mediamtx
        image: bluenviron/mediamtx:latest-ffmpeg
        args: ['/usr/etc/mediamtx.yml']
        ports:
        - containerPort: 8000 # RTP/UDP
          protocol: UDP
        - containerPort: 8001 # RTCP/UDP
          protocol: UDP
        - containerPort: 8554 # RTSP/TCP
        - containerPort: 1935 # RTMP
        - containerPort: 8888 # HLS
        - containerPort: 8889 # WebRTC
        - containerPort: 9997 # Control API
        volumeMounts:
        - name: mediamtx-config
          mountPath: /usr/etc/mediamtx.yml
          subPath: mediamtx.yml
          readOnly: true
        - name: recordings-tmp
          mountPath: /recordings
      - name: mediamtx-proxy
        image: radito3/ss-proxy-service:1.4.2
        ports:
        - containerPort: 8080
        volumeMounts:
        - name: hls-storage
          mountPath: /app/hls
        livenessProbe:
          httpGet:
            path: /public/ping
            port: 8080
          initialDelaySeconds: 10
          periodSeconds: 15
          timeoutSeconds: 5
          successThreshold: 1
          failureThreshold: 3
      volumes:
      - name: mediamtx-config
        configMap:
          name: mediamtx-config
      - name: recordings-tmp
        emptyDir: {}
      - name: hls-storage
        emptyDir: {}
