mediamtx/ingress.yaml
apiVersion: networking.k8s.io/v1
# TODO: this won't suffice, as most of the traffic won't be HTTP/S
kind: Ingress
metadata:
  name: mediamtx-ingress
spec:
  # TODO: either specify multiple backend ports for the same path
  #  or multiple paths for the different ports
  rules:
  - host: pod-0.mediamtx
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: mediamtx-0
            port:
              number: 80
  - host: pod-1.mediamtx
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: mediamtx-1
            port:
              number: 80
  - host: pod-2.mediamtx
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: mediamtx-2
            port:
              number: 80
